@@ -43,34 +43,42 @@ class QtCurveConfig
         BORDER_OVERSIZED
     };
 
+    enum Shade
+    {
+        SHADE_NONE,
+        SHADE_DARK,
+        SHADE_LIGHT,
+        SHADE_SHADOW
+    };
+    
     QtCurveConfig()               { defaults(); }
 
     void defaults();
     void load(const KConfig *cfg, const char *grp=0L);
     void save(KConfig *cfg, const char *grp=0L);
 
-    Size borderSize() const        { return (Size)itsBorderSize; }
-    bool roundBottom() const       { return itsRoundBottom; }
-    bool outerBorder() const       { return itsOuterBorder; }
-    bool innerBorder() const       { return itsInnerBorder; }
-    bool borderlessMax() const     { return itsBorderlessMax; }
-    bool customShadows() const     { return itsCustomShadows; }
-    bool grouping() const          { return itsGrouping; }
-    int  titleBarPad() const       { return itsTitleBarPad; }
-    int  opacity(bool a) const     { return a ? itsActiveOpacity : itsInactiveOpacity; }
-    bool opaqueBorder() const      { return itsOpaqueBorder; }
-    int  edgePad() const           { return itsEdgePad; }
-    void setBorderSize(Size v)     { itsBorderSize=v; }
-    void setRoundBottom(bool v)    { itsRoundBottom=v; }
-    void setOuterBorder(bool v)    { itsOuterBorder=v; }
-    void setInnerBorder(bool v)    { itsInnerBorder=v; }
-    void setBorderlessMax(bool v)  { itsBorderlessMax=v; }
-    void setCustomShadows(bool v)  { itsCustomShadows=v; }
-    void setGrouping(bool v)       { itsGrouping=v; }
-    void setTitleBarPad(int v)     { itsTitleBarPad=v; }
-    void setOpacity(int v, bool a) { a ? itsActiveOpacity=v : itsInactiveOpacity=v; }
-    void setOpaqueBorder(bool v)   { itsOpaqueBorder=v; }
-    void setEdgePad(int v)         { itsEdgePad=v; }
+    Size  borderSize() const        { return (Size)itsBorderSize; }
+    bool  roundBottom() const       { return itsRoundBottom; }
+    Shade outerBorder() const       { return itsOuterBorder; }
+    Shade innerBorder() const       { return itsInnerBorder; }
+    bool  borderlessMax() const     { return itsBorderlessMax; }
+    bool  customShadows() const     { return itsCustomShadows; }
+    bool  grouping() const          { return itsGrouping; }
+    int   titleBarPad() const       { return itsTitleBarPad; }
+    int   opacity(bool a) const     { return a ? itsActiveOpacity : itsInactiveOpacity; }
+    bool  opaqueBorder() const      { return itsOpaqueBorder; }
+    int   edgePad() const           { return itsEdgePad; }
+    void  setBorderSize(Size v)     { itsBorderSize=v; }
+    void  setRoundBottom(bool v)    { itsRoundBottom=v; }
+    void  setOuterBorder(Shade v)   { itsOuterBorder=v; }
+    void  setInnerBorder(Shade v)   { itsInnerBorder=v; }
+    void  setBorderlessMax(bool v)  { itsBorderlessMax=v; }
+    void  setCustomShadows(bool v)  { itsCustomShadows=v; }
+    void  setGrouping(bool v)       { itsGrouping=v; }
+    void  setTitleBarPad(int v)     { itsTitleBarPad=v; }
+    void  setOpacity(int v, bool a) { a ? itsActiveOpacity=v : itsInactiveOpacity=v; }
+    void  setOpaqueBorder(bool v)   { itsOpaqueBorder=v; }
+    void  setEdgePad(int v)         { itsEdgePad=v; }
 
     bool operator==(const QtCurveConfig &o) const
     {
@@ -92,18 +100,18 @@ class QtCurveConfig
 
     private:
 
-    int  itsBorderSize,
-         itsActiveOpacity,
-         itsInactiveOpacity;
-    bool itsRoundBottom,
-         itsOuterBorder,
-         itsInnerBorder,
-         itsBorderlessMax,
-         itsCustomShadows,
-         itsGrouping,
-         itsOpaqueBorder;
-    int  itsTitleBarPad,
-         itsEdgePad;
+    int   itsBorderSize,
+          itsActiveOpacity,
+          itsInactiveOpacity;
+    bool  itsRoundBottom,
+          itsBorderlessMax,
+          itsCustomShadows,
+          itsGrouping,
+          itsOpaqueBorder;
+    Shade itsOuterBorder,
+          itsInnerBorder;
+    int   itsTitleBarPad,
+          itsEdgePad;
 };
 
 }
